# GUI-for-openEB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  run.sh
.github/workflows/: macos.yml
algo/: CMakeLists.txt
algo/analytics/: active_marker.h  auto_bias_controller.h  event_to_video.h  flow_statistics.h  freq_detector.h  isi_analyzer.h  particle_counter.h
algo/analytics/e2vid/: e2vid_inference.h  event_voxel_grid.h  intensity_rescaler.h  unsharp_mask.h
algo/calibration/: extrinsic.cpp  extrinsic.h  intrinsic.cpp  intrinsic.h
algo/common/: data_loader.cpp  data_loader.h  dvs_framer.h  event.h  event_buffer.cpp  event_buffer.h  event_packet.h  event_rate_estimator.h  frame_generator.cpp  frame_generator.h  freme.h  histogram_ring_buffer.h  kalman_filter.h  kmeans.h  lif_integrator.h  lifo_event_buffer.h  particle_filter.h  performance_meter.h  periodic_spline.h  time_limiter.h
algo/common/filter/: angular_lowpass.h  bandpass.h  highpass.h  lowpass.h  median_lowpass.h
algo/cv/: background_mask_filter.h  bandpass_filter.h  blob_detector.h  cluster_interface.h  cluster_lif.h  cluster_path_point.h  corner_detector.h  direction_selective_filter.h  hinge_line_tracker.h  hot_pixel_filter.h  hough_circle_tracker.h  hough_line_tracker.h  line_segment_detector.h  noise_filter.h  object_tracker.h  optical_gyro.h  orientation_cluster.h  orientation_filter.h  overlay.h  perspective_undistort.h  sparse_optical_flow.h  time_surface.h  trigger_synced_filter.h  ultra_slow_motion.h  xyt_visualizer.h
algo/tests/: CMakeLists.txt  noise_tester.h  signal_noise_event.h  test_filter_in_render.cpp  test_filter_integration.cpp  test_loop_flip.cpp  test_phase6_common.cpp  test_phase7_cv.cpp  test_phase8_10.cpp  test_playback_e2v.cpp  test_raw_algos.cpp
doc/: algo_perf_optimization.md  compile.md  dead_code_audit.md  design.md  gui_diagnostic_report.md  gui_optimization.md  macos.md
gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
gui/algo_bridge/: algo_backend.cpp  algo_backend.h  algo_bridge.cpp  algo_bridge.h  filter_chain.cpp  filter_chain.h
gui/algo_bridge/backends/: analytics_backends.cpp  analytics_extra_backends.cpp  backend_common.cpp  backend_common.h  cv_backends.cpp  cv_vector_backends.cpp  display_backends.cpp  filter_backends.cpp  openeb_filter_backends.cpp  openeb_frame_backends.cpp  openeb_preproc_backends.cpp
gui/app/: camera_controller.cpp  camera_controller.h  file_converter.cpp  file_converter.h  file_frame_generator.cpp  file_frame_generator.h  frame_pipeline.cpp  frame_pipeline.h  icon_provider.cpp  icon_provider.h  statistics_controller.cpp  statistics_controller.h  theme_controller.cpp  theme_controller.h
gui/calibration/: calibration_event_tap.cpp  calibration_event_tap.h  calibration_wizard.cpp  calibration_wizard.h  chessboard_display.cpp  chessboard_display.h  sharpness_dialog.cpp  sharpness_dialog.h  sharpness_metrics.cpp  sharpness_metrics.h
gui/config/: config_manager.cpp  config_manager.h  layout_manager.cpp  layout_manager.h
gui/display/: adaptive_renderer.h  contrast_controller.h  display_strategy.cpp  event_display_widget.cpp  event_display_widget.h  frame_annotator.cpp  frame_annotator.h  space_time_display.cpp  space_time_display.h
gui/exporter/: export_dialog.cpp  export_dialog.h  exporter_controller.cpp  exporter_controller.h
gui/panels/: algorithms_panel.cpp  algorithms_panel.h  bias_tweaks_panel.cpp  bias_tweaks_panel.h  biases_panel.cpp  biases_panel.h  devices_panel.cpp  devices_panel.h  display_panel.cpp  display_panel.h  esp_panel.cpp  esp_panel.h  file_tools_panel.cpp  file_tools_panel.h  information_panel.cpp  information_panel.h  preprocessing_panel.cpp  preprocessing_panel.h  roi_panel.cpp  roi_panel.h  settings_panel.cpp  settings_panel.h  statistics_panel.cpp  statistics_panel.h  trigger_panel.cpp  trigger_panel.h
gui/recorder/: playback_controller.cpp  playback_controller.h  playback_controls.cpp  playback_controls.h  recorder_controller.cpp  recorder_controller.h
gui/resources/: icons.qrc
gui/resources/theme/: tokens.h
gui/temporal/: temporal_plot_window.cpp  temporal_plot_window.h
gui/tests/: CMakeLists.txt  test_algo_bridge.cpp  test_config_manager.cpp  test_icon_provider.cpp  test_sharpness_metrics.cpp
gui/widgets/: algo_window.cpp  algo_window.h  custom_title_bar.cpp  custom_title_bar.h  mouse_adaptor.cpp  mouse_adaptor.h  multi_window_manager.cpp  multi_window_manager.h  multiline_text.h  pixel_probe.cpp  pixel_probe.h  target_labeler.cpp  target_labeler.h
models/: convert_to_onnx.py
script/: build_and_run.sh
scripts/: build_macos_app.sh  run_gui.sh
tests/macos/: test_packaged_bundle.sh  test_plugin_loader_config.sh  test_release_bundle_config.sh
wiki/: Algorithms.md  GUI-Guide.md  Getting-Started.md
